--- a/index.qmd
+++ b/index.qmd
@@ -1,4 +1,3 @@
-
 ---
 title: "Cox Proportional Hazards Model"
 output: html_document
@@ -26,13 +25,13 @@ The Cox Proportional Hazard model is a powerful took for survival analysis. In t
 
 #### Application of Cox Proportional Hazards Model
 
-The application of the Cox Proportional Hazard model extends to various domains.Ben-Assuli employs it to predict excessive energy consumption in healthcare buildings, studying various influences. 0The goal of paper was to analyze and predict excessive energy consumption in healthcare buildings. The parameters that were studied was building construction, facilities, demographics and climate. The authors took these variables in order to see the what effects it has to energy overconsumption. The importance of the paper is to find ways for spending on energy as well as analyzing the key facts or consumption in healthcare buildings. The study was done on 64 healthcare buildings in Spain and used the Cox Proportional Hazards model to analyze. The model was adapted to predict energy overconsumption which I thought was interesting route to take for the study. The two variables that ended up being significant was demographic and facilities. I would like to note that this was only conducted in Spain’s region so the demographic column might not be a reliable factor. Also, this was a different approach in using Cox Proportional Hazard model. 
+The application of the Cox Proportional Hazard model extends to various domains.Ben-Assuli employs it to predict excessive energy consumption in healthcare buildings, studying various influences. 0The goal of paper was to analyze and predict excessive energy consumption in healthcare buildings. The parameters that were studied was building construction, facilities, demographics and climate. The authors took these variables in order to see the what effects it has to energy over-consumption. The importance of the paper is to find ways for spending on energy as well as analyzing the key facts or consumption in healthcare buildings. The study was done on 64 healthcare buildings in Spain and used the Cox Proportional Hazards model to analyze. The model was adapted to predict energy over-consumption which I thought was interesting route to take for the study. The two variables that ended up being significant was demographic and facilities. I would like to note that this was only conducted in Spain’s region so the demographic column might not be a reliable factor. Also, this was a different approach in using Cox Proportional Hazard model. 
 
 
-In a different context, Gonzalez-Dominguez utilizes shared frailty with the Cox proportional hazards regression to analyze post discharge survival analysis of CHF patients[@Gonzalez-Dominguez2022]. The goal of the paper is is to find the survival probability of patients with congestive heart failure and identify the factors affecting their early mortality within 90 days after hospital discharge. This paper is interesting because it uses survival analysis with Cox proportional hazards model as well as comparing it with a shared frailty correction. After further research not his I found that shared frailty correction is a technique used in survival analysis to account for unobserved or variability among subjects in a study that can effect their risk of an event. Unlike the Cox Proportional Hazards model, it assumes that the hazard ratios for different individuals are constant over time and that each observation is independent. The dataset that was used for the study was from the Israeli Sheba Medical Center and used variables such as patients records with demographic, clinical, medical and lab test data for a total of 18 variables. The authors found that shared frailty correction significantly improves the Cox Proportional model especially with dependent observations. This is a model I feel like would be beneficial in our capstone to utilize since it can further improve our model. 
+In a different context, Gonzalez-Dominguez utilizes shared frailty with the Cox proportional hazards regression to analyze post discharge survival analysis of CHF patients[@Gonzalez-Dominguez2022]. The goal of the paper is is to find the survival probability of patients with congestive heart failure and identify the factors affecting their early mortality within 90 days after hospital discharge. This paper is interesting because it uses survival analysis with Cox proportional hazards model as well as comparing it with a shared frailty correction. After further research not his I found that shared frailty correction is a technique used in survival analysis to account for unobserved or variability among subjects in a study that can effect their risk of an event.Unlike the Cox Proportional Hazards model, it assumes that the hazard ratios for different individuals are constant over time and that each observation is independent. The data set that was used for the study was from the Israeli Sheba Medical Center and used variables such as patients records with demographic, clinical, medical and lab test data for a total of 18 variables. The authors found that shared frailty correction significantly improves the Cox Proportional model especially with dependent observations. This is a model I feel like would be beneficial in our capstone to utilize since it can further improve our model. 
 
 
-Equeter takes a unique angle by predicting tool lifespan in machining [@Equeter2020]. It focuses on predicting the Mean Up Time of cutting tool insets based on a single cutting parameter: cutting speed. They employed the model for the predication and did so by transforming the data. Although I was confused at the use of the Cox Proportional Hazard model, the authors thought it was a good fit for assessing tool lifespan and has been used in previous machining studies. The first step the author does is generate degradation paths using a gamma process. The gamma process is employed to generate a set of tool lifetimes. Another part that I was surprised in was the author used a logarithmic transformation of cutting speed in order to improve in prediction performance. In addition, the author uses a piecewise stochastic model for flank wear in order to see the effects at the beginning to the end of the tool life. This paper is helpful when looking at appropriate data for using the Cox Proportional Hazard model. I would like to revisit it when my partner and I want to pick a data set as it sets out important notes to consider such as data transformation, logarithmic transformation and size of the data.
+Equeter takes a unique angle by predicting tool lifespan in machining [@Equeter2020]. It focuses on predicting the Mean Up Time of cutting tool insets based on a single cutting parameter: cutting speed. They employed the model for the predication and did so by transforming the data. Although I was confused at the use of the Cox Proportional Hazard model, the authors thought it was a good fit for assessing tool lifespan and has been used in previous machining studies. The first step the author does is generate degradation paths using a gamma process. The gamma process is employed to generate a set of tool lifetimes. Another part that I was surprised in was the author used a logarithmic transformation of cutting speed in order to improve in prediction performance. In addition, the author uses a piece wise stochastic model for flank wear in order to see the effects at the beginning to the end of the tool life. This paper is helpful when looking at appropriate data for using the Cox Proportional Hazard model. I would like to revisit it when my partner and I want to pick a data set as it sets out important notes to consider such as data transformation, logarithmic transformation and size of the data.
 
 #### Methods and Assumptions
 
@@ -40,9 +39,9 @@ Understanding the methods and assumptions behind the Cox Proportional Hazard mod
 
 Deo applies the Cox Proportional Hazard model to study post-surgical patients with stage 3 lung cancer [@Deo2021]. The authors calculated the survival estimates using the Kaplan-Meier estimates, which I discuss and reference in a different article. They used log-rank test to compare the survival rates between the two groups (males and females). They discuss the advantages and disadvantages of using log-rank test. Then they discuss the assumptions of the CPH test and how it is advantageous for clinical research. They observed that patients that are the same age, females have a 41% reduced risk of mortality and a 1 unit increase in age increases the risk of mortality by 1%.
 
-Fox uses Cox Proprtional Hazard in a different light. The researchers used the Rossi data set in the carData package in R[@Fox2023]. The data explores recidivism rates among males in a prison. They created a Cox regression time of re-arrest. They went into detail about how to read the output of the different coefficients. Then, they showed a graph of the estimated survival prediction. There is a specific package in r called Survival, which is useful for this type of analysis.
+Fox uses Cox Proportional Hazard in a different light. The researchers used the Rossi data set in the carData package in R[@Fox2023]. The data explores recidivism rates among males in a prison. They created a Cox regression time of re-arrest. They went into detail about how to read the output of the different coefficients. Then, they showed a graph of the estimated survival prediction. There is a specific package in r called Survival, which is useful for this type of analysis.
 
-Similarly, Bland goes into depth on what the log-rank test is [@Bland2004]. It is used to compare the survival rates between two groups. The log-rank test gives a comparison at some arbitraty point in the point, instead of comparing the whole survival time to one another. The log-rank test is also based on the same assumptions as the Kaplan test. The log-rank test is also more likely to detect a different in the groups when the risk for the outcome of interest is higher in one of the groups. 
+Similarly, Bland goes into depth on what the log-rank test is [@Bland2004]. It is used to compare the survival rates between two groups. The log-rank test gives a comparison at some arbitrary point in the point, instead of comparing the whole survival time to one another. The log-rank test is also based on the same assumptions as the Kaplan test. The log-rank test is also more likely to detect a different in the groups when the risk for the outcome of interest is higher in one of the groups. 
 
 The goal of this study is to see whether hazard ration, relative risk, and other estimates made by the Cox Proportional Hazards model are biased when the basic assumptions of the model are violated[@Abeysekera2009]. This is very important because whenever regression models are run, not just Cox Proportional Hazards models, many times we take for granted that the assumptions of the model are met. This can lead to incorrect conclusions and predictions. The Cox model assumes that the hazard ratios remain constant over time. If this is violated, then the model may falsely suggest that a variable is significant or vice versa. This study showed an example where the hazards ratio is not constant over time. An example was with the age of smokers and the RR as age increased. As there was an increase in cumulative smoking exposure, the RR decrease after 50. It was also addressed how in the Cox PH model, there is increased emphasis on the Relative Risk. This is convenient because it doesn't require estimating background information. They first examined survival curves by smoking status and then compared a simulated data set could define mortality to a real data set. They found that single minded focus on PH models have hindered the development of other models in epidemiological data. Sometimes hazard functions, rather than the rate of hazard functions may be a better alternative. 
 
@@ -53,7 +52,7 @@ inadequately. Also, more than one-fifth of the studies were found to include a p
 
 The model can also be used to study the relationship between sleepiness and prediction of a driver's impairment[@Vadeby2010]. The approach was to only use the parametric part of the hazard function to study changes in risk of a critical event (lane change) due to changes in the explanatory variables (indicators). The probability of a critical event is proportional to the hazard function and therefore the changes in risk can be estimated by changes in the hazard function. All co-variates were statistically significant.
 
-In this literature review, we have explored the foundational concepts of the Cox Proportional Hazard model, its diverse applications, and the methods and assumptions underlying its use. These studies collectively showcase the model's significane in diverse fields and the need to critically assess its assumptions and reporting for reliable results. 
+In this literature review, we have explored the foundational concepts of the Cox Proportional Hazard model, its diverse applications, and the methods and assumptions underlying its use. These studies collectively showcase the model's significance in diverse fields and the need to critically assess its assumptions and reporting for reliable results. 
 
 ## Introduction
 
@@ -63,13 +62,35 @@ The fundamental principles of the Cox Proportional Hazard model and its applicat
 
 By analyzing how the various predictors influence the hazard rate over time, researchers can gain a deeper understanding of the factors that impact outcomes such as patient survival, equipment failure or the likelihood of an individual re-offering. There are studies using the model to gain more insight on heroin addicts and if they were getting methadone treatments[@Abeysekera2009]. There are even some studies that found the predictive analysis of the energy consumption of healthcare buildings and predict the excessive energy[@Ben-Assuli2023]. The Cox Proportional Hazard model can even be used in predicting the Mean Up Time of cutting tools inserts based on a single cutting parameter, cutting speed[@Equeter2020]. By being able to  study and analyze this, the Cox Proportional Hazard model has become a vital tool for addressing a wide range of research questions. The key strength when it comes to working with Cox Proportional Hazard model is that it is able to handle censor data. Since most studies utilize real-world scenarios such as in a biomedical study conducted [@Ben-Assuli2023] where study the post discharge survival analysis of CHF patients, not all studies completed their observations by the end of the study. For example in the CHF patients, the authors also utilized shared frailty correction technique in order to account for unobserved or variability amount subjects in the study that can effect their likelihood of an event. The Cox Proportional Hazard model also extends its utility to medical research. Another article examines its use in post-discharge survival analysis of congestive heart failure patients, employing not only the Cox Proportional model but also shared frailty correction[@Gonzalez-Dominguez2022].A technique to account for unobserved or variable factors that can influence an individual's risk of an event. This demonstrates the adaptability of the model to address complex medical scenarios. 
 
-Although the diversity with the Cox Proportional Hazard model is myriad, it still has its limitations. Not every data set is fit for the model and can present more issues when using the model to conduct research. In the context of this paper, we delve into a cancer dataset sourced from the National Cancer Institute's Surveillance, Epidemiology, and End Results (SEER) Program. Our objective is to scrutinize variables such as site record, sex, age record, cause of death to site record, death classification, and ethnicity, seeking to unveil the factors that influence the time until death. As our analysis unfolds, we aim to shed light on the intricate relationships within the dataset and explore the broader implications of our findings.
+Although the diversity with the Cox Proportional Hazard model is myriad, it still has its limitations. Not every data set is fit for the model and can present more issues when using the model to conduct research. In the context of this paper, we delve into a cancer data set sourced from the National Cancer Institute's Surveillance, Epidemiology, and End Results (SEER) Program. Our objective is to scrutinize variables such as site record, sex, age record, cause of death to site record, death classification, and ethnicity, seeking to unveil the factors that influence the time until death. As our analysis unfolds, we aim to shed light on the intricate relationships within the data set and explore the broader implications of our findings.
 
-In the subsequent sections, we will delve deeper into the intricacies of the dataset and the methodology employed in our analysis, further illuminating the applications and implications of the Cox Proportional Hazard model in the context of our research.
+In the subsequent sections, we will delve deeper into the intricacies of the data set and the methodology employed in our analysis, further illuminating the applications and implications of the Cox Proportional Hazard model in the context of our research.
+
+## Methods
+
+The Cox Proportional Hazard Model is a widely used semiparametric survival analysis method that provides a flexible framework for modeling the hazard rate in the presence of right-censored data. Right-censored data is a type of data where the event of interest like death or failure has not occurred for some of the subjects int he study by the end of observation period. Thus, the exact event time is unknown or not observed for these subjects. In this model, the hazard rate at any time point is expressed as the product of a baseline hazard function, denoted as λ0(t) and an exponential function of a linear combination of covariates. 
+
+Mathematically, the Cox model can be defined as: 
+
+$$
+λ(t) = λ0(t) * exp(β₁X₁ + β₂X₂ + ... + βₖXₖ)
+$$ 
+This is where: 
+$λ(t)$ represents the hazard rate at time t.
+$λ0(t)$ is the baseline hazard function, representing the hazard in the absence of covariates.
+$β₁, β₂, ..., βₖ$ are coefficients associated with covariates$X₁, X₂, ..., Xₖ,$ respectively.
+
+#### Assumptions 
+
+Proportional Hazards Assumption -  This assumption of the Cox model states that the effect of covariates on the hazard rate remains constant and is not time-dependent. The hazard ratio between two individuals should stay consistent over time if one individual's covariate values are a constant factor of the other's.
+
+Independence of Censoring - The model assumes that the censoring process (the event of not observing the outcome) is independent of the event of interest. Hence, censoring process is not related to the underlying risk of the event. 
+
+Linearity of Continuous Variables - The model assumes that the log-hazard is a linear function of the covariates for continuous variables. A unit change in the covariate leads to a constant multiplicative change in the hazard rate. 
 
 ### Data and Vizualisation
 
-The data we are using in this study is provided by the National Cancer Institute Surveillance, Epidemilogy, and End Results Program also known as SEER. It is a comprehensive cancer surveillance system in the United States. SEER collects and reports data related to cancer incidence, prevalence, survival and mortality. It covers a wide range of demographic, clinical, and tumor-related information for cancer research, prevention, and patience care, making it a valuable resource for understanding cancer trends, outcomes, and risk factors at a national level. This dataset will be used as the foundational dataset for my Cox Proportional Hazard models. 
+The data we are using in this study is provided by the National Cancer Institute Surveillance, Epidemiology, and End Results Program also known as SEER. It is a comprehensive cancer surveillance system in the United States. SEER collects and reports data related to cancer incidence, prevalence, survival and mortality. It covers a wide range of demographic, clinical, and tumor-related information for cancer research, prevention, and patience care, making it a valuable resource for understanding cancer trends, outcomes, and risk factors at a national level. This data set will be used as the foundation data set for my Cox Proportional Hazard models. 
 
 ```{r, warning=FALSE, echo=T, message=FALSE}
 # loading packages 
@@ -89,10 +110,11 @@ library(kableExtra)
 library(ggplot2)
 library(gridExtra)
 library(scales)
+library(ggplot2)
 ```
 
 ```{r, warning=FALSE, echo=TRUE}
-Seer_updated<- read.csv("C:/Users/DeleeuwH/Documents/STA6257_Project_Cox-proportional-hazards-models/Seer_updated.csv")
+Seer_updated<- read.csv("Seer_updated.csv")
 
 df <- Seer_updated %>%
   rename(
@@ -129,9 +151,6 @@ df <- df %>%
       TRUE ~ "Other"
     )
   )
-
-
-
 styled_table <- df %>%
   select(
     Age,
@@ -171,12 +190,10 @@ styled_table <- df %>%
  add_overall(last = TRUE) %>%
   bold_labels() %>%
   italicize_levels()
-
 # Export the styled table to an HTML file
 html_table <- styled_table %>%
   as_gt() %>%
   gt::as_raw_html()
-
 # Save the HTML table to a file
 writeLines(html_table, "styled_table.html")
 
@@ -187,17 +204,12 @@ styled_table %>%
 styled_table %>%
   kable() %>%
   kable_styling(full_width = FALSE)
-
-
-
 ```
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
+
 ### Patient Demographics
-=======
->>>>>>> 7b24f25d65662a20f7762ac013df31f2d90bf131
+
 Below is the distribution of patient age using a histogram and density plot. We find that majority of the paitents are between the ages of 60-70.
+
 ```{r, warning=FALSE, echo=TRUE}
 histogram_plot <- ggplot(df, aes(x = Age)) +
   geom_histogram(binwidth = 5, fill = "purple", color = "black") +
@@ -216,7 +228,9 @@ density_plot <- ggplot(df, aes(x = Age)) +
 
 grid.arrange(histogram_plot, density_plot, ncol = 2)
 ```
+
 Below is a bar chart for Race Category. The distribution of race categories reveals a significant imbalance, with the number of individuals in the White category are approximately four times greater than in any other race category. This highlights the necessity for data preprocessing techniques to ensure robut model performance. 
+
 ```{r, warning=FALSE, echo=TRUE}
 bar_plot <- ggplot(df, aes(x = Race_Category)) +
   geom_bar(fill = "purple") +
@@ -229,7 +243,9 @@ bar_plot <- ggplot(df, aes(x = Race_Category)) +
 
 bar_plot
 ```
-Below is the distribution of patient gender. We notice that about 60% of the paitents are females and the rest are males. 
+
+Below is the distribution of patient gender. We notice that about 60% of the patients are females and the rest are males. 
+
 ```{r, warning=FALSE, echo=TRUE}
 pie_chart <- ggplot(df, aes(x = "", fill = Sex)) +
   geom_bar(width = 1) +
@@ -241,7 +257,9 @@ pie_chart <- ggplot(df, aes(x = "", fill = Sex)) +
 
 pie_chart
 ```
+
 Below is the distribution of the Patient Origin. It is split into two categories. Non-Spanish-Hispanic-Latino and Spanish-Hispanic-Latino. (May include this part in the analysis but if not we can write... This column will not be used since it does not provide much insight for our model)
+
 ```{r, warning=FALSE, echo=TRUE}
 bar_plot <- ggplot(df, aes(x = Origin)) +
   geom_bar(fill = "purple") +
@@ -254,7 +272,9 @@ bar_plot <- ggplot(df, aes(x = Origin)) +
 
 bar_plot
 ```
+
 Below is the distribution of year of diagnosis. The year of diagnosis ranges from 2016 through 2019. It appears that it mostly equal but increases by 5000 every year.
+
 ```{r, warning=FALSE, echo=TRUE}
 histogram_plot <- ggplot(df, aes(x = Year.of.diagnosis)) +
   geom_histogram(binwidth = 1, fill = "purple", color = "black") +
@@ -265,7 +285,9 @@ histogram_plot <- ggplot(df, aes(x = Year.of.diagnosis)) +
 
 histogram_plot
 ```
+
 Below is the distribution of survival months. We see that the beginning has a lot of deaths within the first month and goes to a pattern of an exponential decay. 
+
 ```{r, warning=FALSE, echo=TRUE}
 histogram_plot <- ggplot(df, aes(x = Survival.months)) +
   geom_histogram(binwidth = 1, fill = "purple", color = "black") +
@@ -276,7 +298,9 @@ histogram_plot <- ggplot(df, aes(x = Survival.months)) +
 
 histogram_plot
 ```
-Below is the Distribution of the Type of Cancers. When looking at this, we notice that there is a much higher count of others compared to breast cancer, colorectal, lung cancer, pancreatic cancer and prostate cancer.  
+
+Below is the Distribution of the Type of Cancers. When looking at this, we notice that there is a much higher count of others compared to breast cancer, colorectal, lung cancer, pancreatic cancer and prostate cancer. 
+
 ```{r, warning=FALSE, echo=TRUE}
 bar_plot <- ggplot(df, aes(x = Cancer_Group)) +
   geom_bar(fill = "purple") +
@@ -290,83 +314,61 @@ bar_plot <- ggplot(df, aes(x = Cancer_Group)) +
 bar_plot
 ```
 
-<<<<<<< HEAD
-=======
->>>>>>> b23f93692179750eaf2aa1c234b7f52cb159a97c
->>>>>>> 7b24f25d65662a20f7762ac013df31f2d90bf131
+Below is the Median Household Income. 
 ```{r, warning=FALSE, echo=TRUE}
-
-```
-<<<<<<< HEAD
-
-```{r, warning=FALSE, echo=TRUE}
-
-```
-
-## Methods
-
-This is where we will write the method for Cox Proportional Dataset. 
-
-$$
-M_n(x) = \sum_{i=1}^{n} W_n (X_i) Y_i  \tag{1}
-$$ $W_n(x)$ is the sum of weights that belongs to all real numbers.
-Weights are positive numbers and small if $X_i$ is far from $x$.
-
-## Analysis and Results
-=======
-<<<<<<< HEAD
-### Patient Sex
->>>>>>> 7b24f25d65662a20f7762ac013df31f2d90bf131
-```{r}
-cox_model <- coxph(Surv(Survival.months, survived) ~ Cancer_Group + Race_Category + Sex + Age, data = df)
-summary(cox_model)
-surv_fit <- survfit(cox_model, newdata = df, type = "aalen")
-
-```
-
-<<<<<<< HEAD
-=======
-## Median Household Income
-```{r}
 ggplot(df, aes(x = Median_Household_Income, fill=Median_Household_Income)) +
   geom_bar(color="white") +  
   theme_economist(base_family="ITC Officina Sans") +
-  scale_fill_economist(labels=NULL)
+  scale_fill_economist(labels=NULL) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1, vjust=1))
 ```
-=======
+
+## Analysis and Results
+```{r, warning=FALSE, echo=TRUE}
+cox_model <- coxph(Surv(Survival.months, survived) ~ Cancer_Group + Race_Category + Sex + Age, data = df)
+summary(cox_model)
+surv_fit <- survfit(cox_model, newdata = df, type = "aalen")
+```
+Below is a distribution of those who were diagnosed and are still alive. We can see that many with breast cancer are still alive, as well as kidney and thyroid cancer. 
 
 ```{r, warning=FALSE, echo=TRUE}
 
+alive_data <- df[df$survived == 0, ]
+alive_data2 <- alive_data %>%
+  rename(Cancer_type = Site.recode.ICD.O.3.WHO.2008)
+bar_plot2 <- ggplot(alive_data2, aes(x = Cancer_type)) +
+  geom_bar(fill = "purple") +
+  labs(title = "Distribution of the Type of Cancers",
+       x = "Cancer Group",
+       y = "Count") +
+  scale_y_continuous(labels = comma) +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+
+bar_plot2
+
+
 ```
 
-## Methods
 
-This is where we will write the method for Cox Proportional Dataset. 
+The model's coefficient estimates and hazard ratios demonstrate the magnitude and direction of the influence of each covariate on survival. When we look at the Cancer group, the Cox model indicated that the type of cancer a person  had was critical determinate of survival. Based on our results, colorectal and lung cancer were associated with hazard ratios close to .69. When examining the race category there was also substantial effect on survival. For the category under Black and Pacific Islander, the hazard ratios were approximately 1.36 and 1.19, respectively. This indicates an elevated risk of experiencing the event. For the sex category, we found that males face a 2.33 times higher risk of experiencing the event compared to females. For age, there was a 1.03 hazard ration, implying that there was a 3% increase in the hazard for each one-year increment in age. In the above mode, we found the factors that affect survival in the dataset. 
 
-$$
-M_n(x) = \sum_{i=1}^{n} W_n (X_i) Y_i  \tag{1}
-$$ $W_n(x)$ is the sum of weights that belongs to all real numbers.
-Weights are positive numbers and small if $X_i$ is far from $x$.
-
-## Analysis and Results
-```{r}
+```{r, warning=FALSE, echo=TRUE}
 filtered_data <- df %>%
   filter(survived == 1) # we only want those that didn't survive 
  filtered_data$status <- 1
  filtered_data$Cancer_Group <- as.factor(filtered_data$Cancer_Group)
 filtered_data$Gender <- ifelse(filtered_data$Sex == "Female", 0, 1)
 
-
-
 cox_model <- coxph(Surv(Survival.months) ~  Gender + Cancer_Group, data = filtered_data)
 summary(cox_model)
 
 ```
 
-The hazard ratio (exp(coef)) for "Gender" is 1.106. This means that males (coded as 1) have a 1.106 times higher risk of experiencing the event (in this case, death) compared to females (coded as 0).
-The p-value ("< 2e-16") for "Gender" is very low, indicating that the hazard ratio is statistically significant. This means that "Gender" (with females as the reference) is associated with a significant difference in survival, and that difference favors females.
-### Statistical Modeling
-```{r}
+The code above focuses on performing Cox Proportional Hazard model on individuals who did not survive. This allows for more targeted examination of factors and investigate the impact of gender, and cancer type on their survival. The hazard ratio, which is the (exp(coef)) for gender is 1.106. This means that males (coded as 1) have a 1.106 times higher risk of experiencing the event, in this case death, compare to females (coded as 0). The p-value ("< 2e-16") for Gender is very low, indicating that the hazard ratio is statistically significant. This means that "Gender" (with females as the reference) is associated with a significant difference in survival, and that difference favors females. In the Cancer_group category, Pancreatic Cancer has the highest hazard ratio among the cancer groups with approximately 1.919 . This represents an increase in the risk of the event at 91.9% increase. Thus, individuals with pancreatic cancer are at a significantly higher risk of non-survival. In addition, all Cancer_groups except for Prostate Cancer has a statistically significant impact on survival, which is seen in the p-value ("<2e16"). This implies that the differences in survival associated with these cancer types are unlikely to have occurred by chance. 
+
+
+```{r, warning=FALSE, echo=TRUE}
 ## not filtering on death only to see what is associated with higher risk of death compared to those that didn't die
 df$Gender <- ifelse(df$Sex == "Female", 0, 1)
 # Assuming you want "White" to be the reference category
@@ -380,11 +382,13 @@ cox_model_2 <- coxph(Surv(Survival.months, survived) ~ Age + Gender + Race_Categ
 summary(cox_model_2)
 ```
 
-### Conclusion
-Race_CategoryAsian" has a hazard ratio of 0.8547, meaning that individuals in the Asian category have a 14.53% lower risk of death compared to individuals in the "White" category.
-"Race_CategoryBlack" has a hazard ratio of 1.3478, indicating that individuals in the Black category have a 34.78% higher risk of death compared to individuals in the "White" category.
-"Race_CategoryOther/Miscellaneous" has a hazard ratio of 0.8734, meaning that individuals in this category have a 12.66% lower risk of death compared to individuals in the "White" category.
-"Race_CategoryPacific Islander" has a hazard ratio of 1.0706, indicating that individuals in the Pacific Islander category have a 7.06% higher risk of death compared to individuals in the "White" category.
-Notably, "Race_CategoryOther/Miscellaneous" and "Race_CategoryPacific Islander" are not statistically significant predictors of the risk of death as their p-values are greater than 0.05.
+The purpose of the code above is to examine the factors associated with a higher risk of death compared to individuals who did not die. We used the Race category White as a reference category. 
+Race_CategoryAsian has a hazard ratio of 0.8547, meaning that individuals in the Asian category have a 14.53% lower risk of death compared to individuals in the "White" category.
+Race_CategoryBlack has a hazard ratio of 1.3478, indicating that individuals in the Black category have a 34.78% higher risk of death compared to individuals in the "White" category.
+Race_CategoryOther/Miscellaneous has a hazard ratio of 0.8734, meaning that individuals in this category have a 12.66% lower risk of death compared to individuals in the "White" category.
+Race_CategoryPacific Islander has a hazard ratio of 1.0706, indicating that individuals in the Pacific Islander category have a 7.06% higher risk of death compared to individuals in the "White" category.
+Notably, Race_CategoryOther/Miscellaneous and Race_CategoryPacific Islander are not statistically significant predictors of the risk of death as their p-values are greater than 0.05
+
+
 
 \[ \cite{Abeysekera2009}, \cite{Ben-Assuli2023}, \cite{Equeter2020}, \cite{Fan2002}, \cite{Gonzalez-Dominguez2022}, \cite{Faruk2018}, \cite{Deo2021}, \cite{Fox2023}, \cite{Bland2004}, \cite{Kuitunen2021}, \cite{Ponkilainene2021}, \cite{Vadeby2010} \]
